# chronos-lab

./: .env.example  CHANGELOG.md  Dockerfile.mcp  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml
chronos_lab/: .dataset.example.json  .env.example  __init__.py  _utils.py  arcdb.py  aws.py  dataset.py  ib.py  intrinio.py  mcp_server.py  plot.py  settings.py  sources.py  storage.py  tsc.py  utils.py
chronos_lab/analysis/: __init__.py  _utils.py  driver.py
chronos_lab/analysis/calculation/: anomaly.py
chronos_lab/analysis/dag/: anomaly.py  features.py  io.py  standardize.py
docs/: configuration.md  examples.md  getting-started.md  index.md
docs/api/: analysis-calculation.md  analysis-dag.md  analysis-drivers.md  arcdb.md  aws.md  dataset.md  ib.md  index.md  intrinio.md  plot.md  settings.md  sources.md  storage.md
docs/tutorials/: getting-started.ipynb  index.md  interactive-brokers.ipynb  ohlcv-anomaly-detection.ipynb
notebooks/: ohlcv_anomaly_detection.ipynb
