[project]
name = "chronos-lab"
version = "0.1.0"
description = "Time series research laboratory"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Vitaly Kuznetsov", email = "vitaly.kuznetsov@vitalik.net"}
]
dependencies = [
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pydantic-settings>=2.12.0",
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'"
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
arcticdb = [
    { path = "arcticdb-linux_aarch64/dist/arcticdb-6.7.0-cp313-cp313-linux_aarch64.whl", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
    { index = "pypi", marker = "sys_platform != 'linux' and platform_machine == 'aarch64'" }
]

[dependency-groups]
dev = [
    "pandas-stubs~=2.3.3",
]

[project.optional-dependencies]
arcticdb = ["arcticdb"]
mcp = ["fastmcp>=2.14.2"]
yfinance = ["yfinance>=1.0"]
intrinio = ["intrinio-sdk>=6.39.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chronos_lab"]

[tool.hatch.build.targets.sdist]
only-include = [
    "chronos_lab/",
    "LICENSE",
    "README.md",
    "pyproject.toml",
    "uv.lock",
    "Dockerfile.mcp",
]

[project.scripts]
chronos-mcp = "chronos_lab.mcp.server:main"
