[project]
name = "chronos-lab"
version = "0.1.6"
description = "Time series research laboratory"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = { text = "MIT" }
authors = [
    { name = "Vitaly Kuznetsov", email = "chronos-lab@vitalik.net" }
]
dependencies = [
    "numpy>=2.0.2",
    "pandas>=2.0.2",
    "pydantic-settings>=2.0.2",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
arcticdb = [
    { path = "arcticdb-linux_aarch64/dist/arcticdb-6.7.0-cp313-cp313-linux_aarch64.whl", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
    { index = "pypi", marker = "sys_platform != 'linux' and platform_machine == 'aarch64'" }
]

[dependency-groups]
dev = [
    "pandas-stubs~=2.3.3",
]

[project.optional-dependencies]
arcticdb = ["arcticdb"]
mcp = ["fastmcp>=2.14.2"]
yfinance = ["yfinance>=1.0"]
intrinio = ["intrinio-sdk>=6.39.0"]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.0",
    "mkdocs-jupyter",
]
aws = [
    "boto3>=1.42.30",
    "botocore>=1.42.30"
]
analysis = [
    "sf-hamilton[visualization]>=1.50.0",
    "scikit-learn>=1.3.0",
]
visualization = [
    "matplotlib>=3.10.8",
    "mplfinance>=0.12.10b0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chronos_lab"]

[tool.hatch.build.targets.sdist]
only-include = [
    "chronos_lab/",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "pyproject.toml",
]

[project.scripts]
chronos-mcp = "chronos_lab.mcp.server:main"

[project.urls]
Homepage = "https://chronos-lab.vitalik.net/"
Repository = "https://github.com/vitaliknet/chronos-lab"
Changelog = "https://github.com/vitaliknet/chronos-lab/blob/main/CHANGELOG.md"
