[project]
name = "chronos-lab"
version = "0.1.7"
description = "A batteries-included framework for financial time series analysis."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = { text = "MIT" }
authors = [
    { name = "Vitaly Kuznetsov", email = "chronos-lab@vitalik.net" }
]
dependencies = [
    "numpy>=2.0.2",
    "pandas>=2.0.2",
    "pydantic-settings>=2.0.2",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[dependency-groups]
dev = [
    "pandas-stubs~=2.3.3",
]

[project.optional-dependencies]
arcticdb = ["arcticdb"]
mcp = ["fastmcp"]
yfinance = ["yfinance"]
intrinio = ["intrinio-sdk"]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.0",
    "mkdocs-jupyter",
]
aws = [
    "boto3",
    "botocore"
]
analysis = [
    "sf-hamilton[visualization]",
    "scikit-learn",
]
visualization = [
    "matplotlib",
    "mplfinance"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chronos_lab"]

[tool.hatch.build.targets.sdist]
only-include = [
    "chronos_lab/",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "pyproject.toml",
]

[project.scripts]
chronos-mcp = "chronos_lab.mcp.server:main"

[project.urls]
Homepage = "https://chronos-lab.vitalik.net/"
Repository = "https://github.com/vitaliknet/chronos-lab"
Changelog = "https://github.com/vitaliknet/chronos-lab/blob/main/CHANGELOG.md"
